--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MyPortFolio</title>
-        <link rel="stylesheet" href="/reset.css" />
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="./reset.css" />
+        <link rel="stylesheet" href="./style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -76,9 +76,9 @@
             </div>
         </div>
 
-        <script src="/TexParticle.js"></script>
-        <script src="/CardFlip.js"></script>
-        <script src="/ScrachCard.js"></script>
-        <script src="BackParticle.js"></script>
+        <script src="./TexParticle.js"></script>
+        <script src="./CardFlip.js"></script>
+        <script src="./ScrachCard.js"></script>
+        <script src="./BackParticle.js"></script>
     </body>
 </html>
